remove code smells